# SWMM-Standards-Checker

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
docs/: CONFIGURATION.md  INPUT_FORMATS.md  STANDARDS.md  TROUBLESHOOTING.md
swmm_compliance/: __init__.py  app.py  checker.py  cli.py  hydraulics.py  llm_review.py  parsers.py  rules.py
swmm_compliance/standards/: gb50014.json
